--- a/env/docker/dev/docker-composew.yaml
+++ b/env/docker/dev/docker-composew.yaml
@@ -1,22 +1,22 @@
 version: '3'
 services:
-  fileutilsapp:
-    container_name: fileutilsapp
+  converterapp:
+    container_name: converterapp
     restart: always
     build: ../../../
     volumes:
-      - ../../../data/fileutils/logs:/home/bot/app/logs
+      - ../../../data/converter/logs:/home/bot/app/logs
       - ../../../data/shr:/tmp/shr
     ports:
       - 5005:5005
     env_file:
-      - .env.fileutils
+      - .env
     depends_on:
       - db
-      - fileutilsredis
+      - converterredis
       - url2api
-      - fileutilsmtproto
-      - fileutilsbotapi
+      - convertermtproto
+      - converterbotapi
   db:
     container_name: db
     image: postgres:alpine
@@ -27,8 +27,8 @@ services:
       - 5431:5432
     env_file:
       - .db.env
-  fileutilsredis:
-    container_name: fileutilsredis
+  converterredis:
+    container_name: converterredis
     image: redis:alpine
     restart: always
     command:
@@ -37,98 +37,40 @@ services:
       - '--save 300 10'
       - '--save 60 10000'
     volumes:
-      - ../../../data/fileutils/redis:/data
+      - ../../../data/converter/redis:/data
   url2api:
     container_name: url2api
     restart: always
     build: ../../../../url-to-pdf-api/
-  fileutilsmtproto:
-    container_name: fileutilsmtproto
+  convertermtproto:
+    container_name: convertermtproto
     restart: always
     build: ../../../../fileutils-rest/
     env_file:
-      - .env.fileutils
+      - .env
     volumes:
-      - ../../../data/fileutils/gram:/home/bot/app/gram
+      - ../../../data/converter/gram:/home/bot/app/gram
       - ../../../data/shr:/tmp/shr
     depends_on:
-      - fileutilsbotapi
-  fileutilsbot:
-    container_name: fileutilsbot
+      - converterbotapi
+  converterbot:
+    container_name: converterbot
     restart: always
     build: ../../../../fileutils-bot/
     env_file:
-      - .env.fileutils
+      - .env
     volumes:
-      - ../../../data/fileutils/gram:/home/bot/app/gram
+      - ../../../data/converter/gram:/home/bot/app/gram
     depends_on:
-      - fileutilsapp
-  fileutilsbotapi:
-    container_name: fileutilsbotapi
+      - converterapp
+  converterbotapi:
+    container_name: converterbotapi
     restart: always
     build: ../../../../fileutils-bot-api/
     env_file:
-      - .env.fileutils
+      - .env
     volumes:
-      - ../../../data/logs:/app/logs
-      - ../../../data/shr:/tmp/shr
-
-  renamerapp:
-    container_name: renamerapp
-    restart: always
-    build: ../../../../renamer/
-    volumes:
-      - ../../../data/renamer/logs:/home/bot/app/logs
-      - ../../../data/shr:/tmp/shr
-    ports:
-      - 5006:5005
-    env_file:
-      - .env.renamer
-    depends_on:
-      - db
-      - renamerredis
-      - renamermtproto
-      - renamerbotapi
-  renamerredis:
-    container_name: renamerredis
-    image: redis:alpine
-    restart: always
-    command:
-      - 'redis-server'
-      - '--save 900 1'
-      - '--save 300 10'
-      - '--save 60 10000'
-    volumes:
-      - ../../../data/renamer/redis:/data
-  renamermtproto:
-    container_name: renamermtproto
-    restart: always
-    build: ../../../../fileutils-rest/
-    env_file:
-      - .env.renamer
-    volumes:
-      - ../../../data/renamer/gram:/home/bot/app/gram
-      - ../../../data/shr:/tmp/shr
-    depends_on:
-      - renamerbotapi
-  renamerbot:
-    container_name: renamerbot
-    restart: always
-    build: ../../../../fileutils-bot/
-    env_file:
-      - .env.renamer
-    volumes:
-      - ../../../data/renamer/gram:/home/bot/app/gram
-    depends_on:
-      - renamerapp
-  renamerbotapi:
-    container_name: renamerbotapi
-    restart: always
-    build: ../../../../fileutils-bot-api/
-    env_file:
-      - .env.renamer
-    volumes:
-      - ../../../data/renamer/logs:/app/logs
+      - ../../../data/converter/logs:/app/logs
       - ../../../data/shr:/tmp/shr
 volumes:
   pgdata:
