--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -7,6 +7,8 @@ CONVERSION_SERVER=http://url2api:9000
 DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
 MTPROTO_API=http://convertermtproto:8000/
 TEMP_DIR=/tmp/shr
+WORK_DIR=/home/bot/app/
 BOT_API=http://converterapp:8080/
 BOT_API_ENDPOINT=http://converterbotapi:8089/
 SESSION_NAME=converter
+FILE_TIME_LIMIT=0
