--- a/pom.xml
+++ b/pom.xml
@@ -221,5 +221,11 @@
             <artifactId>smart-bot-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.antkorwin</groupId>
+            <artifactId>xsync</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 </project>
