--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -9,6 +9,7 @@ MTPROTO_API=http://convertermtproto:8000/
 TEMP_DIR=/tmp/shr
 WORK_DIR=/home/bot/app/
 PROCESS_LOGGING_DIR=/home/bot/app/logs/process
+MTPROTO_CONCURRENCY_LEVEL=4
 BOT_API=http://converterapp:8080/
 BOT_API_ENDPOINT=http://converterbotapi:8089/
 SESSION_NAME=converter
