--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -14,3 +14,4 @@ BOT_API=http://converterapp:8080/
 BOT_API_ENDPOINT=http://converterbotapi:8089/
 SESSION_NAME=converter
 FILE_TIME_LIMIT=0
+CHECK_SUBSCRIPTION=true
