--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 
     <properties>
         <aspose.version>19.9</aspose.version>
-        <aspose.pdf.version>19.1</aspose.pdf.version>
     </properties>
 
     <repositories>
@@ -146,7 +145,7 @@
         <dependency>
             <groupId>com.aspose</groupId>
             <artifactId>aspose-pdf</artifactId>
-            <version>${aspose.pdf.version}</version>
+            <version>${aspose.version}</version>
         </dependency>
         <dependency>
             <groupId>com.aspose</groupId>
