--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>com.aspose</groupId>
             <artifactId>aspose-pdf</artifactId>
-            <version>${aspose.version}</version>
+            <version>19.1</version>
         </dependency>
         <dependency>
             <groupId>com.aspose</groupId>
