--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -5,14 +5,12 @@ SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_REDIS_HOST=redis
 CONVERSION_SERVER=http://url2api:9000
 DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
-MTPROTO_API=http://convertermtproto:8000/
 TEMP_DIR=/tmp/shr
-WORK_DIR=/home/bot/app/
 PROCESS_LOGGING_DIR=/home/bot/app/logs/process
-MTPROTO_CONCURRENCY_LEVEL=2
-BOT_API=http://converterapp:8080/
-BOT_API_ENDPOINT=http://converterbotapi:8089/
-SESSION_NAME=converter
+FILE_DOWNLOADING_CONCURRENCY_LEVEL=2
 FILE_TIME_LIMIT=0
 CHECK_SUBSCRIPTION=true
 CONVERTER=all
+BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
+BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
+BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
