--- a/bot-api/Dockerfile
+++ b/bot-api/Dockerfile
@@ -17,3 +17,8 @@ RUN cd telegram-bot-api && rm -rf build && mkdir build && cd build && \
 export CXXFLAGS="-stdlib=libc++" && \
 CC=/usr/bin/clang-10 CXX=/usr/bin/clang++-10 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=/usr/local .. && \
 cmake --build . --target install
+
+USER bot
+RUN mkdir -p /home/bot/workdir
+RUN mkdir -p /home/bot/logs
+ENTRYPOINT ["telegram-bot-api", "--http-stat-port=8082", "--dir=/home/bot/workdir", "--local"]
