--- a/bot-api/Dockerfile
+++ b/bot-api/Dockerfile
@@ -21,4 +21,4 @@ cmake --build . --target install
 USER bot
 RUN mkdir -p /home/bot/workdir
 RUN mkdir -p /home/bot/logs
-ENTRYPOINT ["telegram-bot-api", "--http-stat-port=8082", "--dir=/home/bot/workdir", "--local"]
+ENTRYPOINT ["telegram-bot-api", "--http-stat-port=8082", "--log=/home/bot/logs/api.log", "--dir=/home/bot/workdir", "--local"]
