--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -8,6 +8,8 @@ DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
 TEMP_DIR=/tmp/shr
 PROCESS_LOGGING_DIR=/home/bot/app/logs/process
 FILE_TIME_LIMIT=0
+FLOOD_CONTROL_SLEEP_TIME=20
+FLOOD_CONTROL_ENABLE_LOGGING=true
 CHECK_SUBSCRIPTION=true
 CONVERTER=all
 BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
