--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <aspose.version>19.9</aspose.version>
+        <aspose.pdf.version>19.9</aspose.pdf.version>
     </properties>
 
     <repositories>
@@ -145,7 +146,7 @@
         <dependency>
             <groupId>com.aspose</groupId>
             <artifactId>aspose-pdf</artifactId>
-            <version>${aspose.version}</version>
+            <version>${aspose.pdf.version}</version>
         </dependency>
         <dependency>
             <groupId>com.aspose</groupId>
@@ -222,4 +223,20 @@
             <version>1.3</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <aspose.pdf.version>19.1</aspose.pdf.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+        </profile>
+    </profiles>
+
 </project>
