--- a/videoaudio/Dockerfile
+++ b/videoaudio/Dockerfile
@@ -14,50 +14,12 @@ ENV USE_SANDBOX false
 RUN apt-get update -y -qq
 RUN apt-get install -y -qq openjdk-11-jre build-essential curl wget git gdebi p7zip-rar locales rar zip unzip
 
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
-RUN apt-get install -y -qq nodejs
-
-RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-RUN gdebi --n google-chrome-stable_current_amd64.deb
-RUN rm google-chrome-stable_current_amd64.deb
-
 # Locale
 ENV LC_ALL C.UTF-8
 
-RUN wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb
-RUN gdebi --n wkhtmltox_0.12.5-1.bionic_amd64.deb
-RUN rm wkhtmltox_0.12.5-1.bionic_amd64.deb
-
-RUN wget https://gif.ski/gifski-0.10.1.zip
-RUN unzip -j gifski-0.10.1.zip -d gifski
-RUN gdebi --n gifski/gifski_0.10.1_amd64.deb
-RUN rm -rf gifski
-RUN rm gifski-0.10.1.zip
-
-USER bot
-
-RUN git clone https://github.com/saidgadjiev/tgs-to-gif.git
-RUN cd tgs-to-gif && npm install
-
-RUN wget https://github.com/jankovicsandras/imagetracerjava/raw/master/ImageTracer.jar
-
-USER root
-
-RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
-RUN apt-get update -y -qq
-RUN apt-get -y -qq build-dep imagemagick
-RUN apt-get install -y -qq libwebp-dev libopenjp2-7-dev librsvg2-dev libde265-dev libheif-dev
-
-RUN echo 'Imagemagick 7.0.10-19'
-RUN cd /usr/src/ && \
-wget https://www.imagemagick.org/download/ImageMagick.tar.bz2 && \
-tar xvf ImageMagick.tar.bz2 && cd ImageMagick* && \
-./configure && make -j 4 && \
-make install && \
-make distclean && ldconfig
-
 RUN apt-get update -y
-RUN apt-get install -y libopus-dev libmp3lame-dev libfdk-aac-dev libvpx-dev libx264-dev yasm libass-dev libtheora-dev libvorbis-dev libopencore-amrnb-dev libopencore-amrwb-dev mercurial cmake
+RUN apt-get install -y libopus-dev libmp3lame-dev libfdk-aac-dev libvpx-dev libx264-dev yasm libass-dev libtheora-dev \
+libvorbis-dev libopencore-amrnb-dev libopencore-amrwb-dev mercurial cmake
 RUN cd /usr/src && \
 wget https://github.com/videolan/x265/archive/master.zip | unzip && \
 unzip master.zip && \
@@ -68,8 +30,6 @@ make && make install
 
 ENV PATH="/home/bot/ffmpeg_build/bin/:${PATH}"
 
-RUN rm /usr/src/ImageMagick.tar.bz2
-
 RUN mkdir -p /usr/src/libaom && \
   cd /usr/src/libaom && \
   git clone https://aomedia.googlesource.com/aom && \
@@ -78,7 +38,7 @@ RUN mkdir -p /usr/src/libaom && \
 
 RUN apt-get install -y libspeex-dev
 
-RUN apt-get install -y libgmp3-dev libbluray-dev libmfx-dev libshine-dev libsnappy-dev libsoxr-dev libwavpack-dev libtwolame-dev \
+RUN apt-get install -y libgmp3-dev libbluray-dev libmfx-dev libshine-dev libsnappy-dev libsoxr-dev libtwolame-dev \
 libvidstab-dev libxml2-dev
 
 RUN cd /usr/src && \
@@ -129,16 +89,6 @@ PKG_CONFIG_PATH="/home/bot/ffmpeg_build/lib/pkgconfig" \
 make -j 4 && make install
 
 ENV PATH="/home/bot/ffmpeg/:${PATH}"
-
-RUN echo 'calibre-5'
-RUN wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sh /dev/stdin install_dir=/home/bot isolated=y
-ENV PATH="/home/bot/calibre/:${PATH}"
-
-RUN apt-get install -y img2pdf
-RUN apt-get install -y djvulibre-bin
-RUN apt-get install -y libxss1
-RUN apt-get install -y timidity
-RUN apt-get install -y poppler-utils
 
 RUN apt-get clean -y && apt-get autoclean -y && apt-get autoremove -y && rm -rf /var/lib/apt/lists/* /var/tmp/*
 
