--- a/videoaudio/Dockerfile
+++ b/videoaudio/Dockerfile
@@ -11,16 +11,14 @@ USER root
 ENV DEBIAN_FRONTEND noninteractive
 ENV USE_SANDBOX false
 
-RUN apt-get update -y
-RUN apt-get install -y openjdk-11-jre build-essential curl wget git gdebi p7zip-rar locales rar zip unzip
+RUN apt-get update -y && apt-get install -y openjdk-11-jre build-essential curl wget git gdebi p7zip-rar locales rar zip unzip
 
 # Locale
 ENV LC_ALL C.UTF-8
 
 RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
-RUN apt-get update -y
-RUN apt-get -y build-dep imagemagick
-RUN apt-get install -y librsvg2-dev libopenjp2-7-dev libwebp-dev libopus-dev libmp3lame-dev libfdk-aac-dev libvpx-dev libx264-dev yasm libass-dev \
+RUN apt-get update -y && apt-get -y build-dep imagemagick && \
+apt-get install -y librsvg2-dev libopenjp2-7-dev libwebp-dev libopus-dev libmp3lame-dev libfdk-aac-dev libvpx-dev libx264-dev yasm libass-dev \
 libtheora-dev libvorbis-dev libopencore-amrnb-dev libopencore-amrwb-dev mercurial cmake
 RUN cd /usr/src && \
 wget https://github.com/videolan/x265/archive/master.zip | unzip && \
