--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -15,3 +15,4 @@ CONVERTER=all
 BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
 BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
 BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
+WEBHOOK_URL=http://converter:8080
