Smart file feature

--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -16,3 +16,4 @@ BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
 BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
 BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
 WEBHOOK_URL=http://converter:8080
+BOT_NAME=convert_any2any_bot
