--- a/videoaudio/Dockerfile
+++ b/videoaudio/Dockerfile
@@ -92,6 +92,7 @@ RUN apt-get clean -y && apt-get autoclean -y && apt-get autoremove -y && rm -rf 
 
 USER bot
 
+COPY ./scripts/* ./scripts/
 COPY ./target/app.jar .
 
 
