Отладка в докере primary и secondary серверов

--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -5,15 +5,19 @@ SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_REDIS_HOST=redis
 CONVERSION_SERVER=http://url2api:9000
 DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
-TEMP_DIR=/tmp/shr
+TEMP_DIR=/tmp/media/temp
+DOWNLOADS_TEMP_DIR=/tmp/media/downloads
+UPLOADS_TEMP_DIR=/tmp/media/uploads
 PROCESS_LOGGING_DIR=/home/bot/app/logs/process
 FILE_TIME_LIMIT=0
 FLOOD_CONTROL_SLEEP_TIME=20
 FLOOD_CONTROL_ENABLE_LOGGING=true
 CHECK_SUBSCRIPTION=true
-CONVERTER=all
+CONVERTER=video
 BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
 BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
 BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
 WEBHOOK_URL=http://converter:8080
 BOT_NAME=convert_any2any_bot
+SERVER_NUMBER=1
+AUTH_TOKEN=test
