--- a/env/docker/dev/docker-composew-common.yaml
+++ b/env/docker/dev/docker-composew-common.yaml
@@ -14,6 +14,8 @@ services:
     container_name: redis
     image: redis:alpine
     restart: always
+    ports:
+      - 6378:6379
     command:
       - 'redis-server'
       - '--save 900 1'
