--- a/document/Dockerfile
+++ b/document/Dockerfile
@@ -61,7 +61,7 @@ RUN apt-get install -y djvulibre-bin
 RUN apt-get install -y libxss1
 RUN apt-get install -y timidity
 RUN apt-get install -y poppler-utils
-RUN apt-get install -y python
+RUN apt-get update -y && apt-get install -y python
 
 RUN apt-get clean -y && apt-get autoclean -y && apt-get autoremove -y && rm -rf /var/lib/apt/lists/* /var/tmp/*
 
