--- a/pom.xml
+++ b/pom.xml
@@ -197,14 +197,8 @@
 
         <dependency>
             <groupId>ru.gadjini.telegram</groupId>
-            <artifactId>smart-bot-commons</artifactId>
+            <artifactId>smart-work-bot-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.antkorwin</groupId>
-            <artifactId>xsync</artifactId>
-            <version>1.3</version>
         </dependency>
     </dependencies>
 
