static ip for containers

--- a/env/docker/dev/docker-composew-common.yaml
+++ b/env/docker/dev/docker-composew-common.yaml
@@ -10,6 +10,9 @@ services:
       - 5431:5432
     env_file:
       - .common.env
+    networks:
+      br0:
+        ipv4_address: 170.20.0.2
   redis:
     container_name: redis
     image: redis:alpine
@@ -23,6 +26,9 @@ services:
       - '--save 60 10000'
     volumes:
       - ../../../data/redis:/data
+    networks:
+      br0:
+        ipv4_address: 170.20.0.3
   botapi:
     container_name: botapi
     restart: always
@@ -39,12 +45,14 @@ services:
         target: /home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
     env_file:
       - .common.env
+    networks:
+      br0:
+        ipv4_address: 170.20.0.4
 
 volumes:
   pgdata:
     external: true
 
 networks:
-  default:
-    external:
-      name: fileutils
+  br0:
+    external: true
