--- a/env/docker/dev/docker-composew.yaml
+++ b/env/docker/dev/docker-composew.yaml
@@ -76,14 +76,19 @@ services:
       - ../../../data/botapi/workdir:/home/bot/app/botapi/workdir
     env_file:
       - .env
+    networks:
+      br0:
+        ipv4_address: 170.20.0.5
     depends_on:
       - url2api
   url2api:
     container_name: url2api
     restart: always
     build: ../../../../url-to-pdf-api/
+    networks:
+      br0:
+        ipv4_address: 170.20.0.6
 
 networks:
-  default:
-    external:
-      name: fileutils
+  br0:
+    external: true
