--- a/env/docker/dev/docker-composew.yaml
+++ b/env/docker/dev/docker-composew.yaml
@@ -86,7 +86,7 @@ services:
     restart: always
     build: ../../../../url-to-pdf-api/
     networks:
-      br0:
+      smartnet:
         ipv4_address: 170.20.0.6
 
 networks:
