--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
                 <version>4.0.3</version>
                 <configuration>
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
+                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
+                    </generateGitPropertiesFilename>
                 </configuration>
                 <executions>
                     <execution>
@@ -181,6 +182,12 @@
             <groupId>com.detectlanguage</groupId>
             <artifactId>detectlanguage</artifactId>
             <version>1.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
