--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,3 +3,6 @@ spring:
     active: @spring.profiles.active@
   messages:
     basename: messages,messages-common
+server:
+  tomcat:
+    min-spare-threads: 20
