--- a/videoaudio/Dockerfile
+++ b/videoaudio/Dockerfile
@@ -39,6 +39,7 @@ RUN mkdir -p /usr/src/libaom && \
 RUN apt-get install -y libspeex-dev libgmp3-dev libbluray-dev libmfx-dev libshine-dev libsnappy-dev libsoxr-dev libtwolame-dev \
 libvidstab-dev libxml2-dev
 
+RUN echo '28.05.2021'
 RUN cd /usr/src && \
 wget -O- http://ffmpeg.org/releases/ffmpeg-snapshot.tar.bz2 | tar xj && \
 cd ffmpeg && \
