Отладка добавления водяного знака в виде картинки

--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -21,3 +21,4 @@ WEBHOOK_URL=http://converter:8080
 BOT_NAME=convert_any2any_bot
 SERVER_NUMBER=1
 AUTH_TOKEN=test
+FONT_PATH=C:/Users/GadzhievSA/Work/SCM/any2any/fonts/
