--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -13,7 +13,7 @@ FILE_TIME_LIMIT=0
 FLOOD_CONTROL_SLEEP_TIME=20
 FLOOD_CONTROL_ENABLE_LOGGING=true
 CHECK_SUBSCRIPTION=true
-CONVERTER=all
+CONVERTER=video
 BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
 BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
 BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
@@ -21,4 +21,4 @@ WEBHOOK_URL=http://converter:8080
 BOT_NAME=convert_any2any_bot
 SERVER_NUMBER=1
 AUTH_TOKEN=test
-FONT_PATH=C:/Users/GadzhievSA/Work/SCM/any2any/fonts/
+FONT_PATH=/usr/share/fonts/converter/
