--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.4.RELEASE</version>
+                <version>2.4.5</version>
                 <executions>
                     <execution>
                         <goals>
@@ -145,6 +145,12 @@
             <groupId>com.detectlanguage</groupId>
             <artifactId>detectlanguage</artifactId>
             <version>1.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
