screenshot and video sample

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>ru.gadjini.telegram</groupId>
             <artifactId>smart-work-bot-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
