Получение туториалов для всех команд

--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -6,6 +6,8 @@ SPRING_REDIS_HOST=redis
 CONVERSION_SERVER=http://url2api:9000
 DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
 TEMP_DIR=/tmp/media/temp
+TECH_WORK=true
+ADMIN_WHITE_LIST=171271164
 DOWNLOADS_TEMP_DIR=/tmp/media/downloads
 UPLOADS_TEMP_DIR=/tmp/media/uploads
 PROCESS_LOGGING_DIR=/home/bot/app/logs/process
