--- a/audio/Dockerfile
+++ b/audio/Dockerfile
@@ -89,6 +89,9 @@ make -j 4 && make install
 ENV PATH="/home/bot/ffmpeg/:${PATH}"
 
 RUN apt-get install -y timidity
+RUN apt-get update -y
+RUN apt-get install -y sox
+RUN apt-get install -y libsox-fmt-all
 
 RUN apt-get clean -y && apt-get autoclean -y && apt-get autoremove -y && rm -rf /var/lib/apt/lists/* /var/tmp/*
 
