Отладка и новые фиксы ошибок аудио конвертера

--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -14,9 +14,9 @@ PROCESS_LOGGING_DIR=/home/bot/app/logs/process
 FILE_TIME_LIMIT=0
 FLOOD_CONTROL_SLEEP_TIME=20
 FLOOD_CONTROL_ENABLE_LOGGING=true
-CHECK_SUBSCRIPTION=true
-CHECK_PAID_SUBSCRIPTION=true
-CONVERTER=video
+CHECK_SUBSCRIPTION=false
+CHECK_PAID_SUBSCRIPTION=false
+CONVERTER=audio
 BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
 BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
 BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
