--- a/env/docker/dev/.common.env
+++ b/env/docker/dev/.common.env
@@ -1,5 +1,5 @@
-POSTGRES_DB=any2any
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-TELEGRAM_API_ID=2247234
-TELEGRAM_API_HASH=d7d924ca00aaaf004982c1a92e0f3571
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+TELEGRAM_API_ID=
+TELEGRAM_API_HASH=
