--- a/env/docker/dev/.env
+++ b/env/docker/dev/.env
@@ -1,27 +1,27 @@
-BOT_TOKEN=1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/any2any
-SPRING_DATASOURCE_USERNAME=postgres
-SPRING_DATASOURCE_PASSWORD=postgres
-SPRING_REDIS_HOST=redis
-CONVERSION_SERVER=http://url2api:9000
-DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
-TEMP_DIR=/tmp/media/temp
-TECH_WORK=true
-ADMIN_WHITE_LIST=171271164
-DOWNLOADS_TEMP_DIR=/tmp/media/downloads
-UPLOADS_TEMP_DIR=/tmp/media/uploads
-PROCESS_LOGGING_DIR=/home/bot/app/logs/process
-FILE_TIME_LIMIT=0
-FLOOD_CONTROL_SLEEP_TIME=20
-FLOOD_CONTROL_ENABLE_LOGGING=true
-CHECK_SUBSCRIPTION=false
-CHECK_PAID_SUBSCRIPTION=false
-CONVERTER=document
-BOT_API_ENDPOINT=http://192.168.99.100:8081/bot
-BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
-BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
-WEBHOOK_URL=http://converter:8080
-BOT_NAME=convert_any2any_bot
-SERVER_NUMBER=1
-AUTH_TOKEN=test
-FONT_PATH=/usr/share/fonts/converter/
+BOT_TOKEN=
+SPRING_DATASOURCE_URL=
+SPRING_DATASOURCE_USERNAME=
+SPRING_DATASOURCE_PASSWORD=
+SPRING_REDIS_HOST=
+CONVERSION_SERVER=
+DETECT_KEY=
+TEMP_DIR=
+TECH_WORK=
+ADMIN_WHITE_LIST=
+DOWNLOADS_TEMP_DIR=
+UPLOADS_TEMP_DIR=
+PROCESS_LOGGING_DIR=
+FILE_TIME_LIMIT=
+FLOOD_CONTROL_SLEEP_TIME=
+FLOOD_CONTROL_ENABLE_LOGGING=
+CHECK_SUBSCRIPTION=
+CHECK_PAID_SUBSCRIPTION=
+CONVERTER=
+BOT_API_ENDPOINT=
+BOT_API_WORK_DIR=
+BOT_API_LOCAL_WORK_DIR=
+WEBHOOK_URL=
+BOT_NAME=
+SERVER_NUMBER=
+AUTH_TOKEN=
+FONT_PATH=
