--- a/env/docker/dev/.env.load-test
+++ b/env/docker/dev/.env.load-test
@@ -1,19 +1,19 @@
-BOT_TOKEN=token
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/any2any
-SPRING_DATASOURCE_USERNAME=postgres
-SPRING_DATASOURCE_PASSWORD=postgres
-SPRING_REDIS_HOST=redis
-CONVERSION_SERVER=http://url2api:9000
-DETECT_KEY=238726e762bafcb3d3f984d58327ea4a
-TEMP_DIR=/tmp/shr
-PROCESS_LOGGING_DIR=/home/bot/app/logs/process
-FILE_TIME_LIMIT=0
-FLOOD_CONTROL_SLEEP_TIME=20
-FLOOD_CONTROL_ENABLE_LOGGING=true
-CHECK_SUBSCRIPTION=true
-CONVERTER=video
-BOT_API_ENDPOINT=http://localhost:8081/bot
-BOT_API_WORK_DIR=/home/bot/workdir/1119541928:AAFiil_pWtM2YevKfifi-p8XxR0delkEeuw
-BOT_API_LOCAL_WORK_DIR=/home/bot/app/botapi/workdir
-WEBHOOK_URL=http://converter:8080
-BOT_NAME=convert_any2any_bot
+BOT_TOKEN=
+SPRING_DATASOURCE_URL=
+SPRING_DATASOURCE_USERNAME=
+SPRING_DATASOURCE_PASSWORD=
+SPRING_REDIS_HOST=
+CONVERSION_SERVER=
+DETECT_KEY=
+TEMP_DIR=
+PROCESS_LOGGING_DIR=
+FILE_TIME_LIMIT=
+FLOOD_CONTROL_SLEEP_TIME=
+FLOOD_CONTROL_ENABLE_LOGGING=
+CHECK_SUBSCRIPTION=
+CONVERTER=
+BOT_API_ENDPOINT=
+BOT_API_WORK_DIR=
+BOT_API_LOCAL_WORK_DIR=
+WEBHOOK_URL=
+BOT_NAME=
