--- a/env/flyway/dev/flyway.conf
+++ b/env/flyway/dev/flyway.conf
@@ -1,3 +1,3 @@
-flyway.url=jdbc:postgresql://localhost:5431/any2any
-flyway.user=postgres
-flyway.password=postgres
+flyway.url=
+flyway.user=
+flyway.password=
